# lightwatch2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dev  dist  lightwatch
.github/workflows/: build.yml  release.yml
assets/shaders/: bang_core.wgsl  bang_godray.wgsl  bang_shockwave.wgsl  chromatic_aberration.wgsl  dof.wgsl  film_grain.wgsl  god_rays.wgsl  nebula.wgsl  post_chromatic.wgsl  post_grain.wgsl  post_vignette.wgsl  star_twinkle.wgsl  traveler_edge.wgsl  traveler_glow.wgsl  traveler_shell.wgsl  vignette.wgsl
docs/: ARCHITECTURE.md  ROADMAP.md  TECH_STACK.md  TIMELINE.md  TRAVELERS.md  VISION.md
revise/: 01-audio-output.md  02-text-visibility.md  03-window-config.md  04-traveler-glow-shader.md  05-traveler-shell-shader.md  06-post-chromatic-aberration.md  07-post-vignette.md  08-post-film-grain.md  09-god-rays.md  10-spatial-audio.md  11-event-sounds.md  12-cosmic-ambiance.md  13-dust-particles.md  14-trail-particles.md  15-camera-behavior-blending.md  16-bang-core-shader.md  17-dof-integration.md  18-audio-reverb.md  19-production-polish.md  20-final-integration.md  AUDIT.md
src/: lib.rs  main.rs
src/audio/: ambiance.rs  bang_sound.rs  engine.rs  envelope.rs  events.rs  filter.rs  grief_sound.rs  leitmotif.rs  leitmotif_player.rs  melody.rs  mod.rs  oscillator.rs  output.rs  reverb.rs  scale.rs  silence.rs  spatial.rs  transitions.rs  voice.rs
src/bang/: core.rs  debris.rs  expansion.rs  god_rays.rs  mod.rs  shockwave.rs
src/camera/: behavior.rs  breathing.rs  config.rs  dof.rs  mod.rs  rig.rs  shake.rs  transitions.rs
(+69 files in other folders)
