[package]
name = "lightwatch"
version = "0.6.0"
edition = "2021"
authors = ["LIGHTWATCH Collective"]
description = "A 143-second contemplative experience about connection and loss"
license = "MIT"
repository = "https://github.com/watchthelight/lightwatch2"

[dependencies]
bevy = { version = "0.14", features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "hdr",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }

# Audio
bevy_kira_audio = "0.20"

# Math utilities
glam = "0.27"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
instant = "0.1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release-fast]
inherits = "release"
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
